src/test/resources/plugin/inline/errors/unfold.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(unfold.failed:insufficient.permission)
    unfold falze()
}